--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -22,3 +22,23 @@ textarea {
     background-color: #E1E1E1;
     border: 1px solid #E3E3E3;
 }
+
+h1 {
+    font-size: 1.4em;
+}
+
+#bannerLeft h2 {
+    font-size: 3em;
+}
+
+h2 {
+    font-size: 1.2em;
+}
+
+h3 {
+    font-size: 1.0em;
+}
+
+h4 {
+    font-size: 0.8em;
+}
